# madgwick

./: .gitmodules  CMakeLists.txt  README.md
Arduino/: 9DoF.ino
include/: madgwick.h
python/: read9DoF.py  readSerial.py  send9DoF.py
src/: madgwick.cpp
